### #35 메인/검색 고도화 See: Github issue #35 --------------------------------------- ### 작업파일 * LoginPopup.jsx * MainView.jsx/scss * userSaga.js * error.png --------------------------------------- ### 작업내용 * 로그인 팝업 error log 수정 * MainPage data 없을 시에 대한 표현 추가 * 칵테일 검새 결과 z-index가 로그인창보다 높은 부분 수정 * 자동 로그인 시 존재하지 않는 ID면 로컬에서 삭제

--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -230,13 +230,38 @@ body {
 
       .loading_rect {
         position: absolute;
-        z-index: 10000;
+        z-index: 100;
         width: auto;
         height: auto;
         left: 50%;
 
         &._hide {
           display: none;
+        }
+      }
+
+      .nodata_rect {
+        position: absolute;
+        width: 100%;
+        height: auto;
+
+        .nodata_image {
+          width: auto;
+          height: 100px;
+          background-image: url("../../static/images/error.png");
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: contain;
+        }
+
+        .nodata_text {
+          width: auto;
+          height: auto;
+          margin-top: 20px;
+          font-family: NotoSansCJKkr;
+          font-size: 40px;
+          color: #ffffff;
+          text-align: center;
         }
       }
 
